[package]
name = "db"
version = "0.1.0"
authors = ["guzhongren <guzhongren@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres="0.16.0-rc.2"
actix-web = "1.0.8"
dotenv = "0.14.1"
dotenv_codegen = "0.14.1"
serde = "1.0.101"
serde_json = "1.0.41"
env_logger = "0.7.0"
log = "0.4.0"
frank_jwt = "3.1.1"